syntax = "proto2";
import "server_config.proto";

message ClientNode {
  repeated ProxyNode node_list = 1;
}

message ProxyNode {
  optional string server_address= 1;
  optional string server_domain= 2; // 预留
  required uint32 server_port= 3;

  required string client_platform_type = 4; //ios,mac,chg,win,and,
  required string client_platform_version = 5;//6.3.2
  required string client_platform_category = 6;//official

  optional CryptoMethodInfo symmetric_crypto_info = 7; // 对称算法信息
  optional CryptoMethodInfo asymmetric_crypto_info = 8; // 非对称算法信息
}

message CryptoMethodInfo {
  required EncMethodEnum enc_method_type = 1; // 加密算法类型
  optional bytes server_pubkey = 2;
  optional bytes pk = 3;
  optional bytes sec_key = 4;
  optional uint64 client_unique_id = 5; // 客户端唯一标识(uint64)
}





